Putting it back to working status